--- a/Controls/ConnectionManagementControl.xaml
+++ b/Controls/ConnectionManagementControl.xaml
@@ -86,6 +86,7 @@
         <Border Grid.Row="2" BorderThickness="1" BorderBrush="#FFCCCCCC" CornerRadius="5">
             <DataGrid x:Name="ConnectionsDataGrid" 
                       AutoGenerateColumns="False"
+                      IsReadOnly="False"
                       CanUserAddRows="False"
                       CanUserDeleteRows="False"
                       SelectionMode="Single"
@@ -96,20 +97,10 @@
                       FontSize="11"
                       CellEditEnding="ConnectionsDataGrid_CellEditEnding"
                       SelectionChanged="ConnectionsDataGrid_SelectionChanged">
-                
+                <!-- 🔥 FACTOVA Grid 스타일 자동 적용 + IsReadOnly="False"로 편집 가능 -->
                 <DataGrid.Columns>
                     <!-- ID -->
                     <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60" IsReadOnly="True">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -121,84 +112,24 @@
                     </DataGridTextColumn>
 
                     <!-- DB 정보 (편집 가능) -->
-                    <DataGridTextColumn Header="DB 정보" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Width="2*" IsReadOnly="False">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
-                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="DB 정보" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Width="2*" IsReadOnly="False"/>
 
                     <!-- TNS (편집 가능) -->
-                    <DataGridTextColumn Header="TNS" Binding="{Binding TNS, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
-                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="TNS" Binding="{Binding TNS, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False"/>
 
                     <!-- User ID (편집 가능) -->
-                    <DataGridTextColumn Header="User ID" Binding="{Binding UserId, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
-                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="User ID" Binding="{Binding UserId, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False"/>
 
                     <!-- Password (편집 가능 - 텍스트로 표시) -->
-                    <DataGridTextColumn Header="Password" Binding="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
-                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Password" Binding="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False"/>
 
                     <!-- ORG (편집 가능) -->
-                    <DataGridTextColumn Header="ORG (사업부)" Binding="{Binding Org, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
-                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="ORG (사업부)" Binding="{Binding Org, UpdateSourceTrigger=PropertyChanged}" Width="*" IsReadOnly="False"/>
 
                     <!-- Version (ComboBox로 선택) -->
                     <DataGridComboBoxColumn Header="Version" 
                                             SelectedItemBinding="{Binding Version, UpdateSourceTrigger=PropertyChanged}"
                                             Width="100">
-                        <DataGridComboBoxColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridComboBoxColumn.HeaderStyle>
                         <DataGridComboBoxColumn.ElementStyle>
                             <Style TargetType="ComboBox">
                                 <Setter Property="FontSize" Value="11"/>
@@ -215,16 +146,6 @@
 
                     <!-- 활성 (CheckBox) -->
                     <DataGridCheckBoxColumn Header="활성" Binding="{Binding IsActive, UpdateSourceTrigger=PropertyChanged}" Width="60">
-                        <DataGridCheckBoxColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridCheckBoxColumn.HeaderStyle>
                         <DataGridCheckBoxColumn.ElementStyle>
                             <Style TargetType="CheckBox">
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -234,16 +155,6 @@
 
                     <!-- 즐겨찾기 (CheckBox) -->
                     <DataGridCheckBoxColumn Header="즐겨찾기" Binding="{Binding IsFavorite, UpdateSourceTrigger=PropertyChanged}" Width="80">
-                        <DataGridCheckBoxColumn.HeaderStyle>
-                            <Style TargetType="DataGridColumnHeader">
-                                <Setter Property="Background" Value="#FF2196F3"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="Padding" Value="10,5"/>
-                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridCheckBoxColumn.HeaderStyle>
                         <DataGridCheckBoxColumn.ElementStyle>
                             <Style TargetType="CheckBox">
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
